Add Visual Studio 2010 project

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,7 +6,7 @@ set( CMAKE_C_STANDARD_REQUIRED ON )
 set( CMAKE_CXX_STANDARD 11 )
 set( CMAKE_CXX_STANDARD_REQUIRED ON )
 
-set( BUILD_LEGACY OFF CACHE BOOL "Build plug-in for OpenSim 3.x" FORCE )
+set( BUILD_LEGACY OFF CACHE BOOL "Build plug-in for OpenSim 3.x" )
 
 set( OPENSIM_HOME ${CMAKE_SOURCE_DIR}/OpenSim CACHE PATH "OpenSim installation path" )
 set( SIMBODY_HOME ${CMAKE_SOURCE_DIR}/simbody CACHE PATH "Simbody installation path" )
