--- a/OpenSim-Win32/OpenSim-Win32.vcxproj.filters
+++ b/OpenSim-Win32/OpenSim-Win32.vcxproj.filters
@@ -15,13 +15,8 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="..\..\open_sim_model-legacy.cpp">
+    <ClCompile Include="..\open_sim_model-legacy.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-  </ItemGroup>
-  <ItemGroup>
-    <ClInclude Include="..\..\..\RobRehabSystem\src\control\robot_control\interface.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
   </ItemGroup>
 </Project>
