--- a/OpenSim-Win32/OpenSim-Win32.vcxproj
+++ b/OpenSim-Win32/OpenSim-Win32.vcxproj
@@ -14,8 +14,8 @@
     <ClCompile Include="..\curve_interpolation.cpp" />
     <ClCompile Include="..\data_io.cpp" />
     <ClCompile Include="..\data_logging.cpp" />
-    <ClCompile Include="..\main.cpp" />
     <ClCompile Include="..\neural_network.cpp" />
+    <ClCompile Include="..\open_sim_model-legacy.cpp" />
     <ClCompile Include="..\sensors.cpp" />
     <ClCompile Include="..\signal_processing.cpp" />
     <ClCompile Include="..\timing_windows.cpp" />
