--- a/OpenSim-Win32/OpenSim-Win32.vcxproj.filters
+++ b/OpenSim-Win32/OpenSim-Win32.vcxproj.filters
@@ -15,9 +15,6 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="..\main.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
     <ClCompile Include="..\neural_network.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
@@ -37,6 +34,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="..\timing_windows.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="..\open_sim_model-legacy.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
