--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,6 +20,7 @@ if( BUILD_LEGACY )
   set( CMAKE_MODULE_PATH "${OPENSIM_HOME}")
   find_package( OpenSim 3.3 MODULE )
   add_library( OpenSimModel MODULE open_sim_model-legacy.cpp data_io.cpp data_logging.cpp sensors.cpp signal_processing.cpp )
+  target_compile_definitions( OpenSimModel PUBLIC -DOSIM_LEGACY )
 else()
   find_package( Simbody 3.6 PATHS "${SIMBODY_HOME}" NO_MODULE NO_DEFAULT_PATH )
   find_package( OpenSim 4.0 PATHS "${OPENSIM_HOME}" NO_MODULE NO_DEFAULT_PATH )
