Add IK libraries compilation

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,6 +10,8 @@ set( BUILD_LEGACY OFF CACHE BOOL "Build plug-in for OpenSim 3.x" )
 
 add_library( OpenSimModel MODULE osim_model.cpp emg_optimizer-osim.cpp )
 add_library( OpenSimModelNN MODULE osim_model.cpp emg_optimizer-nn.cpp )
+add_library( OpenSimModelIK MODULE osim_model-ik.cpp emg_optimizer-osim.cpp )
+add_library( OpenSimModelIKNN MODULE osim_model-ik.cpp emg_optimizer-nn.cpp )
 
 if( BUILD_LEGACY )
   find_package( Simbody 3.5 REQUIRED PATHS "${SIMBODY_HOME}" NO_MODULE NO_DEFAULT_PATH )
@@ -19,6 +21,8 @@ if( BUILD_LEGACY )
   find_package( OpenSim 3.3 REQUIRED MODULE )
   target_compile_definitions( OpenSimModel PUBLIC -DOSIM_LEGACY )
   target_compile_definitions( OpenSimModelNN PUBLIC -DOSIM_LEGACY -DUSE_NN )
+  target_compile_definitions( OpenSimModelIK PUBLIC -DOSIM_LEGACY )
+  target_compile_definitions( OpenSimModelIKNN PUBLIC -DOSIM_LEGACY -DUSE_NN )
 else()
   # Find the OpenSim libraries and header files.
   set( OPENSIM_INSTALL_DIR $ENV{OPENSIM_HOME} CACHE PATH "Top-level directory of OpenSim install." )
@@ -27,6 +31,7 @@ else()
   find_package( OpenSim 4.0 REQUIRED PATHS "${OPENSIM_INSTALL_DIR}" )
   include_directories( ${CMAKE_SOURCE_DIR} ${OpenSim_INCLUDE_DIRS} ${Simbody_INCLUDE_DIRS} )
   target_compile_definitions( OpenSimModelNN PUBLIC -DUSE_NN )
+  target_compile_definitions( OpenSimModelIKNN PUBLIC -DUSE_NN )
 endif()
 
 mark_as_advanced( Simbody_DIR )
@@ -39,5 +44,13 @@ target_link_libraries( OpenSimModel ${OpenSim_LIBRARIES} ${Simbody_LIBRARIES} )
 set_target_properties( OpenSimModelNN PROPERTIES LIBRARY_OUTPUT_DIRECTORY plugins/robot_control )
 set_target_properties( OpenSimModelNN PROPERTIES PREFIX "" )
 target_link_libraries( OpenSimModelNN ${OpenSim_LIBRARIES} ${Simbody_LIBRARIES} )
+
+set_target_properties( OpenSimModelIK PROPERTIES LIBRARY_OUTPUT_DIRECTORY plugins/robot_control )
+set_target_properties( OpenSimModelIK PROPERTIES PREFIX "" )
+target_link_libraries( OpenSimModelIK ${OpenSim_LIBRARIES} ${Simbody_LIBRARIES} )
+
+set_target_properties( OpenSimModelIKNN PROPERTIES LIBRARY_OUTPUT_DIRECTORY plugins/robot_control )
+set_target_properties( OpenSimModelIKNN PROPERTIES PREFIX "" )
+target_link_libraries( OpenSimModelIKNN ${OpenSim_LIBRARIES} ${Simbody_LIBRARIES} )
 
 # install( TARGETS RobRehabGui RobRehabServer RUNTIME DESTINATION . )
