Model generation/loading tests. IK control mostly working

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,6 +12,8 @@ add_library( OpenSimModel MODULE osim_model.cpp emg_optimizer-osim.cpp )
 add_library( OpenSimModelNN MODULE osim_model.cpp emg_optimizer-nn.cpp )
 add_library( OpenSimModelIK MODULE osim_model-ik.cpp emg_optimizer-osim.cpp )
 add_library( OpenSimModelIKNN MODULE osim_model-ik.cpp emg_optimizer-nn.cpp )
+add_executable( OpenSimModelBuilder osim_model_generator.cpp )
+add_executable( OpenSimModelLoader osim_model_loader.cpp )
 
 if( BUILD_LEGACY )
   find_package( Simbody 3.5 REQUIRED PATHS "${SIMBODY_HOME}" NO_MODULE NO_DEFAULT_PATH )
@@ -23,6 +25,8 @@ if( BUILD_LEGACY )
   target_compile_definitions( OpenSimModelNN PUBLIC -DOSIM_LEGACY -DUSE_NN )
   target_compile_definitions( OpenSimModelIK PUBLIC -DOSIM_LEGACY )
   target_compile_definitions( OpenSimModelIKNN PUBLIC -DOSIM_LEGACY -DUSE_NN )
+  target_compile_definitions( OpenSimModelBuilder PUBLIC -DOSIM_LEGACY )
+  target_compile_definitions( OpenSimModelLoader PUBLIC -DOSIM_LEGACY )
 else()
   # Find the OpenSim libraries and header files.
   set( OPENSIM_INSTALL_DIR $ENV{OPENSIM_HOME} CACHE PATH "Top-level directory of OpenSim install." )
@@ -53,4 +57,5 @@ set_target_properties( OpenSimModelIKNN PROPERTIES LIBRARY_OUTPUT_DIRECTORY plug
 set_target_properties( OpenSimModelIKNN PROPERTIES PREFIX "" )
 target_link_libraries( OpenSimModelIKNN ${OpenSim_LIBRARIES} ${Simbody_LIBRARIES} )
 
-# install( TARGETS RobRehabGui RobRehabServer RUNTIME DESTINATION . )
+target_link_libraries( OpenSimModelBuilder ${OpenSim_LIBRARIES} ${Simbody_LIBRARIES} )
+target_link_libraries( OpenSimModelLoader ${OpenSim_LIBRARIES} ${Simbody_LIBRARIES} )
